--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="main-php.css">
+		<link rel="stylesheet" type="text/css" href="basic.css">
 		<title>My Website's First HTML5 Page</title>
 	</head>
 	<body>
