--- a/Styled Webpage/index.html
+++ b/Styled Webpage/index.html
@@ -20,6 +20,12 @@
 		</ul>
 		
 		<h3>HTML Links</h3>
-		<p><a href="/Javascript Intro/javascript-intro.html">JavaScript Intro</a></p>
+		<p>
+			<a href="/Javascript Intro/javascript-intro.html">JavaScript Intro</a>
+		</p>
+		<p>
+			<a href="/Javascript Intro/JavaScript-Looping.html">JavaScript Looping</a>
+		</p>
+
 	</body>
 </html>
