--- a/Styled Webpage/index.html
+++ b/Styled Webpage/index.html
@@ -21,10 +21,10 @@
 		
 		<h3>HTML Links</h3>
 		<p>
-			<a href="/Javascript Intro/javascript-intro.html">JavaScript Intro</a>
+			<a href="/Javascript/JavaScript-Intro.html">JavaScript Intro</a>
 		</p>
 		<p>
-			<a href="/Javascript Intro/JavaScript-Looping.html">JavaScript Looping</a>
+			<a href="/Javascript/JavaScript-Looping.html">JavaScript Looping</a>
 		</p>
 
 	</body>
