--- a/Styled Webpage/index.html
+++ b/Styled Webpage/index.html
@@ -5,27 +5,34 @@
 		<title>My Website's First HTML5 Page</title>
 	</head>
 	<body>
-	<h1>Hello World</h1>
+		<div class="container">
+			<header><h1>Hello World</h1></header>
+
+			<nav>
+				<ul>
+					<li><a href="/Javascript/JavaScript-Intro.html">JavaScript Intro</a></li>
+					<li><a href="/Javascript/JavaScript-Looping.html">JavaScript Looping</a></li>
+				</ul>
+			</nav>
+
+			<article>
+				<h1>Styled Webpage</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elementum lorem sit amet rutrum blandit. Phasellus sem ipsum, vestibulum viverra sapien a, tincidunt faucibus ipsum. Nam suscipit ornare consequat. Aenean rutrum sapien sed mauris gravida ultrices. Nam consectetur euismod nisi at mattis. Aenean vitae ullamcorper tellus. Morbi tincidunt tellus eget urna convallis, eget viverra augue tincidunt. Duis eget consectetur sapien, in dignissim enim. Quisque sodales sed nulla vitae aliquet.</p>
+
+				<p>Pellentesque lacinia justo a dolor dapibus ornare. Nulla euismod elementum blandit. Nullam dictum lorem id efficitur tempus. Aenean cursus rhoncus sapien quis tincidunt. Donec a tincidunt purus. Suspendisse dolor neque, aliquet in lorem euismod, hendrerit viverra nibh. Aenean et libero eget odio placerat fringilla. Maecenas vitae convallis massa, ac tempus nibh. Etiam eu neque vel ligula varius molestie. Donec lacinia fermentum felis, ac mollis sem molestie nec. Fusce dapibus, mi sit amet malesuada sollicitudin, sem dui cursus diam, ac commodo lectus neque ac libero. In viverra sapien non tortor porta, vel porta lorem bibendum. Pellentesque vitae ex nec quam rhoncus fringilla. Suspendisse interdum dolor dolor, id dapibus elit congue id. Pellentesque sodales commodo velit, ac elementum lorem consequat ut. Sed eu nisl quis metus finibus volutpat.</p>
+
+				<h2>Desired Group Specialties</h2>
+				<ul>
+					<li>Basic Project Management</li>
+					<li>Problem Solving</li>
+					<li>Technical Documentation</li>
+					<li>Programming (HTML,CSS,JavaScript)</li>
+				</ul>
+			</article>
+		
+			<footer>Done By: Asia Muhammad</footer>
 	
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elementum lorem sit amet rutrum blandit. Phasellus sem ipsum, vestibulum viverra sapien a, tincidunt faucibus ipsum. Nam suscipit ornare consequat. Aenean rutrum sapien sed mauris gravida ultrices. Nam consectetur euismod nisi at mattis. Aenean vitae ullamcorper tellus. Morbi tincidunt tellus eget urna convallis, eget viverra augue tincidunt. Duis eget consectetur sapien, in dignissim enim. Quisque sodales sed nulla vitae aliquet.</p>
-
-		<p>Pellentesque lacinia justo a dolor dapibus ornare. Nulla euismod elementum blandit. Nullam dictum lorem id efficitur tempus. Aenean cursus rhoncus sapien quis tincidunt. Donec a tincidunt purus. Suspendisse dolor neque, aliquet in lorem euismod, hendrerit viverra nibh. Aenean et libero eget odio placerat fringilla. Maecenas vitae convallis massa, ac tempus nibh. Etiam eu neque vel ligula varius molestie. Donec lacinia fermentum felis, ac mollis sem molestie nec. Fusce dapibus, mi sit amet malesuada sollicitudin, sem dui cursus diam, ac commodo lectus neque ac libero. In viverra sapien non tortor porta, vel porta lorem bibendum. Pellentesque vitae ex nec quam rhoncus fringilla. Suspendisse interdum dolor dolor, id dapibus elit congue id. Pellentesque sodales commodo velit, ac elementum lorem consequat ut. Sed eu nisl quis metus finibus volutpat.</p>
+		</div>
 		
-		<h2>Desired Group Specialties</h2>
-		<ul>
-			<li>Basic Project Management</li>
-			<li>Problem Solving</li>
-			<li>Technical Documentation</li>
-			<li>Programming (HTML,CSS,JavaScript)</li>
-		</ul>
-		
-		<h3>HTML Links</h3>
-		<p>
-			<a href="/Javascript/JavaScript-Intro.html">JavaScript Intro</a>
-		</p>
-		<p>
-			<a href="/Javascript/JavaScript-Looping.html">JavaScript Looping</a>
-		</p>
-
 	</body>
 </html>
