updated css and javascript

--- a/Javascript/JavaScript-Intro.html
+++ b/Javascript/JavaScript-Intro.html
@@ -3,32 +3,39 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="/Styled Webpage/basic.css">
 		<title>JavaScript Intro</title>
-
-		
-
 	</head>
 
 	<body>
-		<h1 id="h1">My First JavaScript Page</h1>
+		<div class="container">
+		<header><h1 id="h1">JavaScript Intro</h1></header>
+		<nav>
+				<ul>
+					<li><a href="/Styled Webpage/index.html">Index Page</a></li>
+				</ul>
+			</nav>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elementum lorem sit amet rutrum blandit. Phasellus sem ipsum, vestibulum viverra sapien a, tincidunt faucibus ipsum. Nam suscipit ornare consequat. Aenean rutrum sapien sed mauris gravida ultrices. Nam consectetur euismod nisi at mattis. Aenean vitae ullamcorper tellus. Morbi tincidunt tellus eget urna convallis, eget viverra augue tincidunt. Duis eget consectetur sapien, in dignissim enim. Quisque sodales sed nulla vitae aliquet.</p>
+		<article>
+			<h1>My First JavaScript Page</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elementum lorem sit amet rutrum blandit. Phasellus sem ipsum, vestibulum viverra sapien a, tincidunt faucibus ipsum. Nam suscipit ornare consequat. Aenean rutrum sapien sed mauris gravida ultrices. Nam consectetur euismod nisi at mattis. Aenean vitae ullamcorper tellus. Morbi tincidunt tellus eget urna convallis, eget viverra augue tincidunt. Duis eget consectetur sapien, in dignissim enim. Quisque sodales sed nulla vitae aliquet.</p>
 
+			<button type="button" onclick="changeColor()">Change Header Color</button>
 
-		<button onclick = "redirectTo('/Styled Webpage/index.html')">Index Page</button>
+			<script type="text/javascript">
+				let date = new Date();
+				alert("Today's date is "+date);
 
-		<button type="button" onclick="changeColor()">Change Header Color</button>
+				function redirectTo(sUrl) {
+					window.location=sUrl
+				}
+				function changeColor(){
+					document.getElementById("h1").style.color = "magenta";
+				}
+			</script>
+		</article>
+		<footer>Done By: Asia Muhammad</footer>
+		</div>
 
-		<script type="text/javascript">
-			let date = new Date();
-			alert("Today's date is "+date);
-
-			function redirectTo(sUrl) {
-				window.location=sUrl
-			}
-			function changeColor(){
-				document.getElementById("h1").style.color = "magenta";
-			}
-		</script>
+		
 
 	</body>
 </html>
