--- a/Javascript/JavaScript-Looping.html
+++ b/Javascript/JavaScript-Looping.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="/Styled Webpage/basic.css">
+		<link rel="stylesheet" type="text/css" href="http://amuhamm1.github.io/Styled Webpage/basic.css">
 		<title>JavaScript Looping</title>
 		<script>
 			var myObject = [
