--- a/Styled Webpage/index.html
+++ b/Styled Webpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="http://amuhamm1.github.io/Styled Webpage/basic.css">
+		<link rel="stylesheet" href="https://amuhamm1.github.io/Styled Webpage/basic.css">
 		<title>My Website's First HTML5 Page</title>
 	</head>
 	<body>
