--- a/Javascript/JavaScript-Intro.html
+++ b/Javascript/JavaScript-Intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="http://amuhamm1.github.io/Styled Webpage/basic.css">
+		<link rel="stylesheet" href="https://amuhamm1.github.io/Styled-Webpage/basic.css">
 		<title>JavaScript Intro</title>
 	</head>
 
