--- a/Javascript/JavaScript-Intro.html
+++ b/Javascript/JavaScript-Intro.html
@@ -10,9 +10,9 @@
 		<header><h1 id="h1">JavaScript Intro</h1></header>
 		<nav>
 				<ul>
-					<li><a href="/Styled Webpage/index.html">Index Page</a></li>
+					<li><a href="https://amuhamm1.github.io/Styled-Webpage/index.html">Index Page</a></li>
 				</ul>
-			</nav>
+		</nav>
 
 		<article>
 			<h1>My First JavaScript Page</h1>
