--- a/Javascript/JavaScript-Looping.html
+++ b/Javascript/JavaScript-Looping.html
@@ -36,6 +36,11 @@
 	<body>
 		<div class="container">
 		<header><h1>JavaScript Looping</h1></header>
+		<nav>
+				<ul>
+					<li><a href="https://amuhamm1.github.io/Styled-Webpage/index.html">Index Page</a></li>
+				</ul>
+		</nav>
 		<article>
 			<h1>My Music</h1><br>
 			<table border = "1" bgcolor = "magenta">
