--- a/Styled-Webpage/index.html
+++ b/Styled-Webpage/index.html
@@ -10,8 +10,8 @@
 
 			<nav>
 				<ul>
-					<li><a href="/Javascript/JavaScript-Intro.html">JavaScript Intro</a></li>
-					<li><a href="/Javascript/JavaScript-Looping.html">JavaScript Looping</a></li>
+					<li><a href="https://amuhamm1.github.io/Javascript/JavaScript-Intro.html">JavaScript Intro</a></li>
+					<li><a href="https://amuhamm1.github.io/Javascript/JavaScript-Looping.html">JavaScript Looping</a></li>
 				</ul>
 			</nav>
 
