--- a/Javascript/JavaScript-Looping.html
+++ b/Javascript/JavaScript-Looping.html
@@ -8,27 +8,32 @@
 			{"Title": "Redbone",
 			"Artist": "Childish Gambino",
 			"Album": '"Awaken, My Love!"',
-			"Genre": "R&B/Soul"},
+			"Genre": "R&B/Soul",
+			"Time:": "5:27"},
 
 			{"Title": "Get You",
 			"Artist": "Daniel Caesar",
 			"Album": "Freudian",
-			"Genre": "R&B/Soul"},
+			"Genre": "R&B/Soul",
+			"Time:": "4:38"},
 
 			{"Title": "Love Galore",
 			"Artist": "SZA",
 			"Album": "Ctrl",
-			"Genre": "R&B/Soul"},
+			"Genre": "R&B/Soul",
+			"Time:": "4:35"},
 
 			{"Title": "Don't",
 			"Artist": "Bryson Tiller",
 			"Album": "TRAPSOUL",
-			"Genre": "R&B/Soul"},
+			"Genre": "R&B/Soul",
+			"Time:": "3:18"},
 
 			{"Title": "Madonna",
 			"Artist": "Drake",
 			"Album": "If You're Reading This It's Too Late",
-			"Genre": "Hip-Hop/R&B"}
+			"Genre": "Hip-Hop/R&B",
+			"Time:": "2:58"}
 		];
 		</script>
 	</head>
@@ -37,9 +42,9 @@
 		<div class="container">
 		<header><h1>JavaScript Looping</h1></header>
 		<nav>
-				<ul>
-					<li><a href="https://amuhamm1.github.io/Styled-Webpage/index.html">Index Page</a></li>
-				</ul>
+			<ul>
+				<li><a href="https://amuhamm1.github.io/Styled-Webpage/index.html">Index Page</a></li>
+			</ul>
 		</nav>
 		<article>
 			<h1>My Music</h1><br>
@@ -50,6 +55,7 @@
 						<th>Artist</th>
 						<th>Album</th>
 						<th>Genre</th>
+						<th>Time</th>
 					</tr>
 				</thead>
 					<tbody id = "playlist01" bgcolor = "#C8C8C8"></tbody>
