--- a/Javascript/JavaScript-Looping.html
+++ b/Javascript/JavaScript-Looping.html
@@ -70,7 +70,8 @@
 								obj["Title"] + "</td><td>" +
 								obj["Artist"] + "</td><td>" +
 								obj["Album"] + "</td><td>" +
-								obj["Genre"] + 
+								obj["Genre"] + "</td><td>" +
+								obj["Time"] +
 								"</td></tr>";
 					}
 				}
