update date field

--- a/Javascript/JavaScript-Looping.html
+++ b/Javascript/JavaScript-Looping.html
@@ -9,31 +9,31 @@
 			"Artist": "Childish Gambino",
 			"Album": '"Awaken, My Love!"',
 			"Genre": "R&B/Soul",
-			"Time:": "5:27"},
+			"Time:": 5:27},
 
 			{"Title": "Get You",
 			"Artist": "Daniel Caesar",
 			"Album": "Freudian",
 			"Genre": "R&B/Soul",
-			"Time:": "4:38"},
+			"Time:": 4:38},
 
 			{"Title": "Love Galore",
 			"Artist": "SZA",
 			"Album": "Ctrl",
 			"Genre": "R&B/Soul",
-			"Time:": "4:35"},
+			"Time:": 4:35},
 
 			{"Title": "Don't",
 			"Artist": "Bryson Tiller",
 			"Album": "TRAPSOUL",
 			"Genre": "R&B/Soul",
-			"Time:": "3:18"},
+			"Time:": 3:18},
 
 			{"Title": "Madonna",
 			"Artist": "Drake",
 			"Album": "If You're Reading This It's Too Late",
 			"Genre": "Hip-Hop/R&B",
-			"Time:": "2:58"}
+			"Time:": 2:58}
 		];
 		</script>
 	</head>
