--- a/JavaScript-Intro.html
+++ b/JavaScript-Intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="https://amuhamm1.github.io/Styled-Webpage/basic.css">
+		<link rel="stylesheet" href="https://amuhamm1.github.io/basic.css">
 		<title>JavaScript Intro</title>
 	</head>
 
@@ -10,7 +10,7 @@
 		<header><h1 id="h1">JavaScript Intro</h1></header>
 		<nav>
 				<ul>
-					<li><a href="https://amuhamm1.github.io/Styled-Webpage/index.html">Index Page</a></li>
+					<li><a href="https://amuhamm1.github.io/index.html">Index Page</a></li>
 				</ul>
 		</nav>
 
@@ -22,11 +22,8 @@
 
 			<script type="text/javascript">
 				let date = new Date();
-				alert("Today's date is "+date);
+				alert("Today's date is " + date);
 
-				function redirectTo(sUrl) {
-					window.location=sUrl
-				}
 				function changeColor(){
 					document.getElementById("h1").style.color = "magenta";
 				}
