--- a/JavaScript-Looping.html
+++ b/JavaScript-Looping.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="https://amuhamm1.github.io/Styled-Webpage/basic.css">
+		<link rel="stylesheet" href="https://amuhamm1.github.io/basic.css">
 		<title>JavaScript Looping</title>
 		<script>
 			var myObject = [
@@ -43,7 +43,7 @@
 		<header><h1>JavaScript Looping</h1></header>
 		<nav>
 			<ul>
-				<li><a href="https://amuhamm1.github.io/Styled-Webpage/index.html">Index Page</a></li>
+				<li><a href="https://amuhamm1.github.io/index.html">Index Page</a></li>
 			</ul>
 		</nav>
 		<article>
