--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="https://amuhamm1.github.io/Styled-Webpage/basic.css">
+		<link rel="stylesheet" href="https://amuhamm1.github.io/basic.css">
 		<title>My Website's First HTML5 Page</title>
 	</head>
 	<body>
@@ -10,8 +10,8 @@
 
 			<nav>
 				<ul>
-					<li><a href="https://amuhamm1.github.io/Javascript/JavaScript-Intro.html">JavaScript Intro</a></li>
-					<li><a href="https://amuhamm1.github.io/Javascript/JavaScript-Looping.html">JavaScript Looping</a></li>
+					<li><a href="https://amuhamm1.github.io/JavaScript-Intro.html">JavaScript Intro</a></li>
+					<li><a href="https://amuhamm1.github.io/JavaScript-Looping.html">JavaScript Looping</a></li>
 				</ul>
 			</nav>
 
