--- a/JavaScript-Looping.html
+++ b/JavaScript-Looping.html
@@ -48,8 +48,8 @@
 		</nav>
 		<article>
 			<h1>My Music</h1><br>
-			<table border = "1" bgcolor = "magenta">
-				<thead bgcolor = "#808080">
+			<table>
+				<thead>
 					<tr>
 						<th>Title</th>
 						<th>Artist</th>
@@ -58,19 +58,19 @@
 						<th>Time</th>
 					</tr>
 				</thead>
-					<tbody id = "playlist" bgcolor = "#C8C8C8"></tbody>
+					<tbody id = "playlist"></tbody>
 			</table>
 			
 			<h2>Statistics Table</h2>
-			<table border = "1" bgcolor = "magenta">
-				<thead bgcolor = "#808080">
+			<table>
+				<thead>
 					<tr>
 						<th>Number of Songs</th>
 						<th>Number of Artists</th>
 						<th>Length of Playlist</th>
 					</tr>
 				</thead>
-					<tbody id = "playlistStatistics" bgcolor = "#C8C8C8"></tbody>
+					<tbody id = "playlistStatistics"></tbody>
 			</table>
 
 			<script>
