--- a/JavaScript-Looping.html
+++ b/JavaScript-Looping.html
@@ -90,6 +90,39 @@
 				document.getElementById("playlist").innerHTML = text;
 			</script>
 
+			<script>
+
+function count(obj, objCol){
+    var sum = 0;
+    for (var i = 0; i < obj.length; i++) {
+        if (obj[i][objCol] !== obj[i+1][objCol]) {
+            sum++;
+        }
+    }
+    return sum;
+}
+
+function lengthOfPlaylist(obj){
+    var count = 0;
+    for (var x in obj) {
+        if (obj.hasOwnProperty(x)) {
+            count++;
+        }
+    }
+    return count;
+}
+
+var table2Contents = "";
+
+table2Contents += "<tr><td>" + 
+                count(myObject, 'Title') + "</td><td>" + 
+                count(myObject, 'Artist') + "</td><td>" +
+                lengthOfPlaylist(myObject)+ 
+                 "</td></tr>";
+document.getElementById("playlistStatistics").innerHTML = table2Contents;
+
+</script>
+
 		</article>
 		<footer>Done By: Asia Muhammad</footer>
 		</div>
