file location changes

--- a/WebPage/contact_page.html
+++ b/WebPage/contact_page.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" type="text/css" href="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/css_page.css">
+<link rel="stylesheet" type="text/css" href="https://amuhamm1.github.io/WebPage/css_page.css">
 
 <style>
 body, html {
@@ -14,11 +14,8 @@ body, html {
 .bgimg {
     background-position: center;
     background-size: cover;
-    background-image: url("/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/images/dorm_building.jpg");
+    background-image: url("https://amuhamm1.github.io/WebPage/images/dorm_building.jpg");
     min-height: 75%;
-}
-.menu {
-    display: none;
 }
 </style>
 
@@ -28,13 +25,13 @@ body, html {
 <div class="w3-top" style="font-size:30px">
   <div class="w3-row w3-padding w3-black">
     <div class="w3-col s3">
-      <a href="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/home_page.html" class="w3-button w3-block w3-black">HOME</a>
+      <a href="https://amuhamm1.github.io/WebPage/home_page.html" class="w3-button w3-block w3-black">HOME</a>
     </div>
     <div class="w3-col s3">
-      <a href="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/about_us_page.html" class="w3-button w3-block w3-black">ABOUT</a>
+      <a href="https://amuhamm1.github.io/WebPage/about_us_page.html" class="w3-button w3-block w3-black">ABOUT</a>
     </div>
     <div class="w3-col s3">
-      <a href="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/get_started_page.html" class="w3-button w3-block w3-black">GET STARTED</a>
+      <a href="https://amuhamm1.github.io/WebPage/get_started_page.html" class="w3-button w3-block w3-black">GET STARTED</a>
     </div>
     <div class="w3-col s3">
       <a href="#contact" class="w3-button w3-block w3-black">CONTACT</a>
@@ -69,11 +66,11 @@ body, html {
 <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
 <p style="text-align:right;">
 <!--Facebook icon-->
-<a href="https://www.facebook.com/UMDreslife/" target="_blank"><img alt="" src="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/images/facebook_icon.png" width="80" height="80"/></a>&nbsp; &nbsp; &nbsp;
+<a href="https://www.facebook.com/UMDreslife/" target="_blank"><img alt="" src="https://amuhamm1.github.io/WebPage/images/facebook_icon.png" width="80" height="80"/></a>&nbsp; &nbsp; &nbsp;
 <!--Twitter icon-->
-<a href="https://twitter.com/UMDReslife" target="_blank"><img alt="" src="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/images/twitter_icon.png" width="80" height="80"/></a>&nbsp; &nbsp; &nbsp;
+<a href="https://twitter.com/UMDReslife" target="_blank"><img alt="" src="https://amuhamm1.github.io/WebPage/images/twitter_icon.png" width="80" height="80"/></a>&nbsp; &nbsp; &nbsp;
 <!--Instagram icon-->
-<a href="https://www.instagram.com/UMDReslife/" target="_blank"><img alt="" src="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/images/instagram_icon.png" width="80" height="80"/></a>
+<a href="https://www.instagram.com/UMDReslife/" target="_blank"><img alt="" src="https://amuhamm1.github.io/WebPage/images/instagram_icon.png" width="80" height="80"/></a>
 </p>
 </footer>
 
