--- a/WebPage/home_page.html
+++ b/WebPage/home_page.html
@@ -4,21 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" type="text/css" href="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/css_page.css">
+<link rel="stylesheet" type="text/css" href="https://amuhamm1.github.io/WebPage/css_page.css">
 
 <style>
 body, html {
     height: 100%;
     font-family: "Inconsolata", sans-serif;
-}
-.bgimg {
-    background-position: center;
-    background-size: cover;
-    background-image: url("/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/images/dorm_building.jpg");
-    min-height: 75%;
-}
-.menu {
-    display: none;
 }
 </style>
 
@@ -31,26 +22,24 @@ body, html {
       <a href="#home_page" class="w3-button w3-block w3-black">HOME</a>
     </div>
     <div class="w3-col s3">
-      <a href="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/about_us_page.html" class="w3-button w3-block w3-black">ABOUT</a>
+      <a href="https://amuhamm1.github.io/WebPage/about_us_page.html" class="w3-button w3-block w3-black">ABOUT</a>
     </div>
     <div class="w3-col s3">
-      <a href="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/get_started_page.html" class="w3-button w3-block w3-black">GET STARTED</a>
+      <a href="https://amuhamm1.github.io/WebPage/get_started_page.html" class="w3-button w3-block w3-black">GET STARTED</a>
     </div>
     <div class="w3-col s3">
-      <a href="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/contact_page.html" class="w3-button w3-block w3-black">CONTACT</a>
+      <a href="https://amuhamm1.github.io/WebPage/contact_page.html" class="w3-button w3-block w3-black">CONTACT</a>
     </div>
   </div>
 </div>
 
-<!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="home">
-  <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:100px">UMD<br>Housing</span>
+<!-- HeroSpace Image -->
+<div class="hero-section">
+  <div class="hero-section-text">
+    <h1>UMD On-Campus Housing</h1>
+    <h5>Asia | Sami | Ebony | Jerri | Kaushal | Jose</h5>
   </div>
-  <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white" style="font-size:30px">Asia | Sami | Ebony | Jerri | Kaushal | Jose</span>
-  </div>
-</header>
+</div>
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
@@ -72,11 +61,11 @@ body, html {
 <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
 <p style="text-align:right;">
 <!--Facebook icon-->
-<a href="https://www.facebook.com/UMDreslife/" target="_blank"><img alt="" src="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/images/facebook_icon.png" width="80" height="80"/></a>&nbsp; &nbsp; &nbsp;
+<a href="https://www.facebook.com/UMDreslife/" target="_blank"><img alt="" src="https://amuhamm1.github.io/WebPage/images/facebook_icon.png" width="80" height="80"/></a>&nbsp; &nbsp; &nbsp;
 <!--Twitter icon-->
-<a href="https://twitter.com/UMDReslife" target="_blank"><img alt="" src="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/images/twitter_icon.png" width="80" height="80"/></a>&nbsp; &nbsp; &nbsp;
+<a href="https://twitter.com/UMDReslife" target="_blank"><img alt="" src="https://amuhamm1.github.io/WebPage/images/twitter_icon.png" width="80" height="80"/></a>&nbsp; &nbsp; &nbsp;
 <!--Instagram icon-->
-<a href="https://www.instagram.com/UMDReslife/" target="_blank"><img alt="" src="/Volumes/DISK_IMG/College Stuff/UMD/SPRING 2018/INST377/Group Project/WebPage/images/instagram_icon.png" width="80" height="80"/></a>
+<a href="https://www.instagram.com/UMDReslife/" target="_blank"><img alt="" src="https://amuhamm1.github.io/WebPage/images/instagram_icon.png" width="80" height="80"/></a>
 </p>
 </footer>
 
