--- a/WebPage/home_page.html
+++ b/WebPage/home_page.html
@@ -11,6 +11,28 @@ body, html {
     height: 100%;
     font-family: "Inconsolata", sans-serif;
 }
+
+/* Style the hero section */
+.hero-section {
+  background: url("https://amuhamm1.github.io/WebPage/images/umd_library.jpg") 50% no-repeat;
+  background-size: cover;
+  height: 60vh;
+  text-align: center;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero-section .hero-section-text {
+  color: #fefefe;
+  text-shadow: 1px 1px 2px #0a0a0a;
+}
 </style>
 
 <body>
@@ -44,7 +66,7 @@ body, html {
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
 
-<!-- About Container -->
+<!-- Home Container -->
 <div class="w3-container" id="home_page">
   <div class="w3-content" style="max-width:1000px; font-size:30px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide" style="font-size:50px">HOME</span></h5>
