--- a/WebPage/get_started_page.html
+++ b/WebPage/get_started_page.html
@@ -52,7 +52,7 @@ body, html {
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
 
-<!-- About Container -->
+<!-- Get Started Container -->
 <div class="w3-container" id="get_started">
   <div class="w3-content" style="max-width:1000px; font-size:30px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide" style="font-size:50px">GET STARTED</span></h5>
