--- a/WebPage/home_page.html
+++ b/WebPage/home_page.html
@@ -28,11 +28,6 @@ body, html {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
-.hero-section .hero-section-text {
-  color: #fefefe;
-  text-shadow: 1px 1px 2px #0a0a0a;
-}
 </style>
 
 <body>
@@ -57,10 +52,17 @@ body, html {
 
 <!-- HeroSpace Image -->
 <div class="hero-section">
-  <div class="hero-section-text">
-    <h1>UMD On-Campus Housing</h1>
-    <h5>Asia | Sami | Ebony | Jerri | Kaushal | Jose</h5>
-  </div>
+
+    <div class="w3-display-middle w3-center">
+    <span class="w3-text-white" style="font-size:100px">UMD<br>Housing</span>
+    </div>
+    <div class="w3-display-bottomright w3-center w3-padding-large">
+    <span class="w3-text-white" style="font-size:30px">Asia | Sami | Ebony | Jerri | Kaushal | Jose</span>
+    </div>
+
+    <!-- <h1>UMD On-Campus Housing</h1>
+    <h5>Asia | Sami | Ebony | Jerri | Kaushal | Jose</h5>-->
+
 </div>
 
 <!-- Add a background color and large text to the whole page -->
